Adding new award

--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,3 +1,6 @@
+- date: 2018 - 2019
+  name: Social Sciences and Humanities Research Council (SSHRC) Master's Graduate Scholarship ($17,500)
+  
 - date : 2017 - 2018
   name : Elizabeth Young Lacey Scholarship in Psychology ($17,500)
 
