Adding more conferences

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1,5 +1,30 @@
 - names :
     - Guan, K.W.
+    - Heine, S.J.
+  date : February 2019
+  title : Misperceptions of Moral Character.
+  location : Poster presented at the Society for Personality and Social Psychology Conference, Portland, WA, U.S.A.
+
+- names :
+    - Guan, K.W.
+    - Robinson, J.
+    - Joel, S.
+    - Plaks, J.
+  date : March 2018
+  title : "It’s not you, it’s me: Moral decision-making in romantic relationships."
+  location : Poster presented at the Society for Personality and Social Psychology Conference, Atlanta, GA, U.S.A.
+
+- names :
+    - Waggoner-Denton, A.
+    - Guan, K.
+    - Jeon, C.
+    - Liu, C.
+  date : May 2017
+  title : Student reactions to receiving various forms of help.
+  location : Talk presented at the University of Toronto Teaching and Learning Symposium, University of Toronto, ON, Canada. 
+
+- names :
+    - Guan, K.W.
     - Zou, C.
     - Andersen, J. P.
     - Peterson, J. P.
