--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,9 @@
 - date: 2017 - Present
   details:
-    - Master's, Psychology, University of British Columbia
+    - MA. Psychology. University of British Columbia
     - "Supervisor: Dr. Steven Heine"
 - date: 2012 - 2017
   details:
-    - B.Sc. Psychology. Univeristy of Toronto. 2017.
+    - B.Sc. Psychology. University of Toronto. 2017.
     - Graduated Honors with High Distinction
     - "Undergraduate Supervisor: Jason Plaks"
